[package]
name = "data-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
anyhow = "1"
flume = "0.10.14"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
humantime = "2.1.0"

clap = { version = "3.2.20", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls"] }
